Replaced grid item width with screen-relative width.

--- a/frontend/css/grid.css
+++ b/frontend/css/grid.css
@@ -183,7 +183,7 @@
 
 .boom-compilation-grid-item .boom-movie-grid-info-overlay-title {
     font-size: 20px;
-    width: 300px;
+    width: 15.625vw;
     margin-top: 215px;
     }
 
